feature: add  GET order and DELETE order APIs (#1040)
